  * checks/files.pm:
    + [BR] Fix false positive in detection of cross arch pkgconfig.
      (Closes: #755902).
    + [BR] Detect privacy breach fixable by using existing debian
      package.
    + [BR] Whitelist <link rel="generator-home"...> in privacy breach
      checker.
    + [NT] Apply patch from Damyan Ivanov to handle the new
      Perl5 library path location.  (Closes: #757921)
  * checks/menu-format.pm:
    + [BR] Add new desktop keys files. Move key list to data.
      (Closes: #755266).
    + [NT] Apply patch from Niklas Fiekas to check for desktop files
      with MimeType-field but no format code in the Exec-field.
      (Closes: #757383)
  * checks/phppear.pm:
    + [BR] Fix a false positive for
      missing-pkg-php-tools-addon phpcomposer, thanks to
      David Prévot (Closes: #754738).
  * checks/source-copyright.{desc,pm}:
    + [BR] Add a pedantic warning about non dep-5 debian/copyright.
    + [BR] Detect empty required fields.  (Closes: #748452, #656801).
    + [BR] Detect undefined license.  (Closes: #733659).
  * checks/testsuite.desc:
    + [BR] Update ref url.  (Closes: #755275).
  
  * data/cruft/non-distributable-files:
    + [BR] Detect play boy Lenna test image.
  * data/cruft/non-free-files:
    + [BR] Add non free icc profile HP5000_UVDuraImageGlossMaxQ.icc
      from nips2 package.
  * data/cruft/warn-file-type:
    + [BR] Add debug source suffix for detecting javascript
      source-is-missing and improve test suite. Fix a
      false postive in mono.
  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).
  * data/debhelper/dh_commands-manual:
    + [JW] Add dh_apache2 relations to avoid a false-positive.
      Thanks to Axel Beckert for reporting the issue.
      (Closes: #748688)
    + [NT] Add ":any" to all python related dependencies.  Thanks
      to Matthias Klose for reporting the issue.  (Closes: #733733)
  * data/debhelper/*: